@@ -3169,9 +3169,10 @@ int battle_check_target( struct block_list *src, struct block_list *target,int f
 				return -1; //Cannot be targeted yet.
 			break;
 		case BL_MOB:
-			if (((TBL_MOB*)target)->special_state.ai > 1 &&
+			if((((TBL_MOB*)target)->special_state.ai == 2 || //Marine Spheres
+				(((TBL_MOB*)target)->special_state.ai == 3 && battle_config.summon_flora&1)) && //Floras
 				s_bl->type == BL_PC && src->type != BL_MOB)
-			{	//Alchemist summoned mobs are always targettable by players
+			{	//Targettable by players
 				state |= BCT_ENEMY;
 				strip_enemy = 0;
 			}
@@ -3474,6 +3475,7 @@ static const struct battle_data_short {
 	{ "defunit_not_enemy",                 &battle_config.defnotenemy				},
 	{ "gvg_traps_target_all",	            &battle_config.vs_traps_bctall			},
 	{ "traps_setting",	                  &battle_config.traps_setting	},
+	{ "summon_flora_setting",              &battle_config.summon_flora	},
 	{ "clear_skills_on_death",             &battle_config.clear_unit_ondeath },
 	{ "clear_skills_on_warp",              &battle_config.clear_unit_onwarp },
 	{ "random_monster_checklv",            &battle_config.random_monster_checklv	},
@@ -3872,6 +3874,7 @@ void battle_set_defaults() {
 	battle_config.defnotenemy=0;
 	battle_config.vs_traps_bctall=BL_PC;
 	battle_config.traps_setting=0;
+	battle_config.summon_flora=3;
 	battle_config.clear_unit_ondeath=BL_ALL;
 	battle_config.clear_unit_onwarp=BL_ALL;
 	battle_config.random_monster_checklv=1;
